# precursors-calculator

./: .gitignore  CMakeLists.txt  README.md  element.cpp  input.cpp  input.h  main.cpp  math.h  reagent.h  solution.cpp  solution.h  solutiondb.cpp  solutiondb.h  utils.h
data/: oxidation_states.txt
examples/: eigen_2.cpp
src/: CMakeLists.txt  input.cpp  input.h  math.h  samply.cpp  solution.h  solutiondb.h  utils.h
